2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanner.cs: ScanNodeSet may change the
	  ExtensionNodeSets collection, so it is necessary to make a copy when
	  iterating with it.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TypeExtensionNode.cs: Made the description of
	  TypeExtensionNode shorter.
	* Mono.Addins/AddinRegistry.cs: Made the add-in registry constructor public.
	* Mono.Addins.Database/SetupProcess.cs: Fix problem when M.A. is located in
	  a folder with spaces in the name. Fix by Georg Wächter.

2007-11-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Workaround for mcs bug.

2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Description/ExtensionNodeDescription.cs: Add missing
	  ChildNodes property.

2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Localization, Mono.Addins.Localization/GettextDomain.cs,
	  Mono.Addins.Localization/IAddinLocalizer.cs,
	  Mono.Addins.Localization/NullLocalizer.cs,
	  Mono.Addins.Localization/StringTableLocalizer.cs,
	  Mono.Addins.Localization/StringResourceLocalizer.cs,
	  Mono.Addins.Localization/IAddinLocalizerFactory.cs,
	  Mono.Addins.Localization/GettextLocalizer.cs, Mono.Addins.mdp,
	  Mono.Addins/RuntimeAddin.cs, Mono.Addins/ExtensionTree.cs,
	  Mono.Addins/NodeAttributeAttribute.cs, Mono.Addins/AddinManager.cs,
	  Mono.Addins/ExtensionNode.cs, Mono.Addins/AddinLocalizer.cs,
	  Makefile.am, Mono.Addins.Description/NodeTypeAttribute.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/ExtensionNodeType.cs: Implemented support for
	  add-in localization.
	* Mono.Addins/NodeElement.cs,
	  Mono.Addins.Description/ExtensionNodeDescriptionCollection.cs: Added
	  ChildNodes property to NodeElement.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Update paths.

2007-10-23  Ankit Jain  <jankit@novell.com>
